// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse 1`] = `
Object {
  "fonts": Array [],
  "props": Array [],
  "views": Array [
    Object {
      "children": Array [],
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 0,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 2`] = `
Object {
  "fonts": Array [],
  "props": Array [],
  "views": Array [
    Object {
      "children": Array [
        Object {
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 1,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 3`] = `
Object {
  "fonts": Array [],
  "props": Array [],
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "Before",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "children": Array [
            Object {
              "is": "ImageInside",
              "isBasic": true,
              "isGroup": false,
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "Image",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 5,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "name": "source",
                  "tags": Object {},
                  "type": "Property",
                  "value": "https://image.com/file.jpg",
                },
              ],
              "scopes": Array [],
              "type": "Block",
            },
            Object {
              "children": Array [],
              "is": "VerticalInside",
              "isBasic": true,
              "isGroup": true,
              "isList": false,
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 8,
                },
                "start": Object {
                  "column": 0,
                  "line": 7,
                },
              },
              "name": "Vertical",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "is": "Nested",
          "isBasic": true,
          "isGroup": true,
          "isList": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 9,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "Vertical",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "is": "After",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 15,
            },
            "start": Object {
              "column": 0,
              "line": 10,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 11,
                },
                "start": Object {
                  "column": 0,
                  "line": 11,
                },
              },
              "name": "text",
              "tags": Object {},
              "type": "Property",
              "value": "after",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "purple",
            },
          ],
          "scopes": Array [
            Object {
              "isSystem": true,
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 9,
                      "line": 13,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 13,
                    },
                  },
                  "name": "when",
                  "tags": Object {
                    "scope": "hover",
                    "shouldBeProps": true,
                    "validProps": false,
                  },
                  "type": "Property",
                  "value": "hover",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 14,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 14,
                    },
                  },
                  "name": "color",
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": "red",
                },
              ],
              "value": "hover",
            },
          ],
          "type": "Block",
        },
        Object {
          "children": Array [],
          "is": "Last",
          "isBasic": true,
          "isGroup": true,
          "isList": false,
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 17,
            },
            "start": Object {
              "column": 0,
              "line": 16,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 17,
                },
                "start": Object {
                  "column": 0,
                  "line": 17,
                },
              },
              "name": "backgroundColor",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "blue",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "BlueButton",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 17,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 4`] = `
Object {
  "fonts": Array [],
  "props": Array [],
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "A1",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 3,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "is": "A2",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 5,
            },
            "start": Object {
              "column": 0,
              "line": 4,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "white",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "A",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "A Vertical ",
      "loc": Object {
        "start": Object {
          "line": 0,
        },
      },
      "type": "You have some spaces before or after this line. Clean them up.",
    },
    Object {
      "line": "A2 Text    ",
      "loc": Object {
        "start": Object {
          "line": 4,
        },
      },
      "type": "You have some spaces before or after this line. Clean them up.",
    },
  ],
}
`;

exports[`#parse 5`] = `
Object {
  "fonts": Array [],
  "props": Array [
    Object {
      "defaultValue": false,
      "name": "backgroundColor",
      "type": "string",
    },
    Object {
      "defaultValue": "red",
      "name": "color",
      "type": "string",
    },
    Object {
      "defaultValue": 10,
      "name": "marginLeft",
      "type": "number",
    },
    Object {
      "defaultValue": "This is the title",
      "name": "text",
      "type": "string",
    },
    Object {
      "defaultValue": false,
      "name": "onFocus",
      "type": "function",
    },
    Object {
      "defaultValue": false,
      "name": "from",
      "type": "array",
    },
  ],
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "Title",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 7,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "defaultValue": "red",
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "color",
              "tags": Object {
                "props": true,
                "style": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.color",
            },
            Object {
              "defaultValue": 10,
              "loc": Object {
                "end": Object {
                  "column": 18,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "marginLeft",
              "tags": Object {
                "props": true,
                "style": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.marginLeft",
            },
            Object {
              "defaultValue": "This is the title",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "text",
              "tags": Object {
                "props": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.title",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 10,
            },
            "start": Object {
              "column": 0,
              "line": 8,
            },
          },
          "name": "CaptureText",
          "properties": Array [
            Object {
              "defaultValue": false,
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "name": "onFocus",
              "tags": Object {
                "props": true,
                "shouldBeProps": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.onFocus",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "childrenProxyMap": null,
              "isBasic": false,
              "isGroup": true,
              "isList": false,
              "loc": Object {
                "end": Object {
                  "column": 4,
                  "line": 13,
                },
                "start": Object {
                  "column": 0,
                  "line": 13,
                },
              },
              "name": "Stuff",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "isBasic": true,
          "isGroup": true,
          "isList": true,
          "loc": Object {
            "end": Object {
              "column": 4,
              "line": 13,
            },
            "start": Object {
              "column": 0,
              "line": 11,
            },
          },
          "name": "List",
          "properties": Array [
            Object {
              "defaultValue": false,
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "name": "from",
              "tags": Object {
                "props": true,
                "shouldBeProps": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.from",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 13,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [
        Object {
          "defaultValue": false,
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 1,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "backgroundColor",
          "tags": Object {
            "props": true,
            "style": true,
            "validProps": true,
          },
          "type": "Property",
          "value": "props.backgroundColor",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 48,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "onClick",
          "tags": Object {
            "shouldBeProps": true,
            "validProps": false,
          },
          "type": "Property",
          "value": "event => props.onClick(props.name, event)",
        },
      ],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "backgroundColor props.backgroundColor",
      "loc": Object {
        "end": Object {
          "column": 36,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "type": "Add a default value to backgroundColor like: backgroundColor props.backgroundColor default value",
    },
    Object {
      "line": "onClick event => props.onClick(props.name, event)",
      "loc": Object {
        "end": Object {
          "column": 48,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "type": "The code you used in the props value is invalid",
    },
    Object {
      "line": "onFocus props",
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "type": "Add a default value to onFocus like: onFocus props default value",
    },
    Object {
      "line": "from props",
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 12,
        },
      },
      "type": "Add a default value to from like: from props default value",
    },
  ],
}
`;

exports[`#parse 6`] = `
Object {
  "fonts": Array [],
  "props": Array [
    Object {
      "defaultValue": false,
      "name": "marginTop",
      "type": "number",
    },
  ],
  "views": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "is": "EmptyWhen",
          "isBasic": true,
          "isGroup": true,
          "isList": false,
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 9,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "blue",
            },
            Object {
              "defaultValue": false,
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "marginTop",
              "tags": Object {
                "props": true,
                "style": true,
                "validProps": true,
              },
              "type": "Property",
              "value": "props.marginTop",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "border",
              "tags": Object {
                "shorthand": true,
              },
              "type": "Property",
              "value": "1px solid red",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 3,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "when",
              "tags": Object {
                "scope": "",
                "shouldBeProps": true,
                "validProps": false,
              },
              "type": "Property",
              "value": "",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [
            Object {
              "isSystem": false,
              "properties": Array [],
              "value": "",
            },
            Object {
              "isSystem": false,
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 7,
                    },
                  },
                  "name": "when",
                  "tags": Object {
                    "scope": "props. stuff",
                    "shouldBeProps": true,
                    "validProps": false,
                  },
                  "type": "Property",
                  "value": "props. stuff",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 8,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 8,
                    },
                  },
                  "name": "backgroundColor",
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": "purple",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 10,
                      "line": 9,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 9,
                    },
                  },
                  "name": "color",
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": "green",
                },
              ],
              "value": "props. stuff",
            },
          ],
          "type": "Block",
        },
      ],
      "is": "Warning",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "marginTop props",
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "type": "Add a default value to marginTop like: marginTop props default value",
    },
    Object {
      "line": "border 1px solid red",
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "type": "The shorthand border isn't allowed. You need to expand it like:
borderColor
borderStyle
borderWidth",
    },
    Object {
      "line": "when",
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "type": "This when has no condition assigned to it. Add one like: when props.isCondition",
    },
    Object {
      "line": "when props. stuff",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 7,
        },
        "start": Object {
          "column": 0,
          "line": 7,
        },
      },
      "type": "The code you used in the props value is invalid",
    },
    Object {
      "line": "backgroundColor purple",
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 8,
        },
        "start": Object {
          "column": 0,
          "line": 8,
        },
      },
      "type": "You're missing a base prop for backgroundColor. Add it before all whens on the block.",
    },
  ],
}
`;
